--- a/remostyle.css
+++ b/remostyle.css
@@ -18,7 +18,7 @@ p {
         width: 100%;
         background-color: rgb(247, 247, 247);
         color: rgb(75, 75, 75);
-        /*border-top: 1pt solid black;*/
+        border-top: 1pt solid black;
     }
 
     table tr td {
